initial try-statement implementation